--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +10,8 @@
         android:id="@+id/activity_alice_button_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right|center_vertical"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="30dp"
         android:clickable="true"
         android:src="@android:drawable/ic_menu_help"
@@ -20,7 +21,7 @@
         android:id="@+id/activity_alice_button_encrypt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
         android:clickable="true"
         android:src="@android:drawable/ic_lock_idle_lock"
@@ -41,7 +42,7 @@
         android:id="@+id/activity_alice_text_crypted"
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
@@ -51,7 +52,8 @@
         android:id="@+id/activity_alice_spinner"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_vertical|center_horizontal" />
+        android:layout_alignParentTop="false"
+        android:layout_centerInParent="true" />
 
     <TextView
         android:id="@+id/activity_alice_title"
@@ -64,4 +66,4 @@
         android:textAlignment="center"
         android:textSize="24sp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
