--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -18,11 +18,23 @@
         app:backgroundTint="@color/colorAccent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_alice_button_encrypt"
+        android:id="@+id/activity_alice_button_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_manage"
+        app:backgroundTint="@color/colorAccent"
+        app:elevation="0dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/activity_alice_button_encrypt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="36dp"
         android:clickable="true"
         android:src="@android:drawable/ic_lock_idle_lock"
         app:backgroundTint="@color/colorAccent"
