--- a/app/src/main/res/layout/activity_eve.xml
+++ b/app/src/main/res/layout/activity_eve.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ActivityEve">
-    <TextView
-        android:id="@+id/activity_eve_text_plainmessage"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/activity_eve_text_messagecrypted"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_gravity="top"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:elevation="3dp"
-        android:text="TextView" />
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/activity_eve_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:text="TextView"
-        android:textAlignment="center"
+        android:layout_height="29dp"
+        android:gravity="center"
+        android:text="Spion Eve"
         android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/activity_eve_button_readMessage"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:text="Nachricht einlesen" />
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        tools:layout_height="200dp" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_eve_button_cryptotools"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/activity_eve_button_cryptotools"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="30dp"
+            android:clickable="true"
+            android:src="@android:drawable/ic_lock_idle_lock"
+            app:backgroundTint="@color/design_default_color_primary" />
+
+        <Button
+            android:id="@+id/activity_eve_button_readMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginLeft="24dp"
+            android:text="Nachricht einlesen" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="30dp"
-        android:clickable="true"
-        android:src="@android:drawable/ic_lock_idle_lock"
-        app:backgroundTint="@color/design_default_color_primary" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        tools:layout_height="200dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
