--- a/app/src/main/res/layout/activity_persons.xml
+++ b/app/src/main/res/layout/activity_persons.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
                     android:backgroundTint="@color/colorAccent"
-                    android:text="Alice"
+                    android:text="@string/alice"
                     android:textSize="14sp" />
 
                 <Button
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Bob"
+                    android:text="@string/bob"
                     android:textSize="14sp" />
 
                 <Button
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:backgroundTint="@color/design_default_color_primary"
-                    android:text="Eve"
+                    android:text="@string/eve"
                     android:textColor="@android:color/background_light"
                     android:textSize="14sp" />
 
