Farben für Alice, Bob, Eve hinzugefügt, Layout Welcome und Persons überarbeitet

--- a/app/src/main/res/layout/activity_bob.xml
+++ b/app/src/main/res/layout/activity_bob.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -42,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:clickable="true"
-                android:src="@android:drawable/ic_lock_idle_lock" />
+                android:src="@android:drawable/ic_lock_idle_lock"
+                app:backgroundTint="@color/colorBob" />
 
             <Button
                 android:id="@+id/activity_bob_button_readMessage"
