--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -7,26 +7,12 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/activity_alice_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/alice"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/activity_alice_text_message"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textMultiLine"
@@ -35,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_alice_title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <android.support.design.widget.FloatingActionButton
@@ -46,7 +32,7 @@
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:src="@android:drawable/ic_menu_help"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/colorAlice"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_alice_text_message" />
 
@@ -74,7 +60,7 @@
         android:clickable="true"
         android:src="@android:drawable/ic_menu_manage"
         android:textAlignment="center"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/colorAlice"
         app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/activity_alice_button_info"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +70,7 @@
     <TextView
         android:id="@+id/activity_alice_text_crypted"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
@@ -100,10 +86,10 @@
         android:id="@+id/activity_alice_button_encrypt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:src="@android:drawable/ic_lock_idle_lock"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/colorAlice"
         app:elevation="0dp"
         app:layout_constraintStart_toStartOf="@+id/activity_alice_button_info"
         app:layout_constraintTop_toBottomOf="@+id/activity_alice_text_crypted" />
@@ -114,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/colorAlice"
         app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/activity_alice_button_encrypt"
         app:layout_constraintEnd_toEndOf="@+id/activity_alice_button_details" />
