--- a/app/src/main/res/layout/activity_persons.xml
+++ b/app/src/main/res/layout/activity_persons.xml
@@ -13,21 +13,19 @@
             android:id="@+id/activity_person_text_intro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_height="180dp" />
+            android:minHeight="100dp"
+            android:text="@string/persons_task" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/activity_persons_button_alice"
@@ -35,60 +33,64 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:backgroundTint="@color/colorAccent"
+                    android:backgroundTint="@color/colorAlice"
                     android:text="@string/alice"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/activity_persons_text_alice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/persons_alice" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/activity_persons_button_bob"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="8dp"
+                    android:backgroundTint="@color/colorBob"
                     android:text="@string/bob"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/activity_persons_text_bob"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/persons_bob" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/activity_persons_button_eve"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:backgroundTint="@color/design_default_color_primary"
+                    android:layout_marginRight="8dp"
+                    android:backgroundTint="@color/colorEve"
                     android:text="@string/eve"
                     android:textColor="@android:color/background_light"
                     android:textSize="14sp" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/activity_persons_text_alice"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="10dp"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/activity_persons_text_bob"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="TextView" />
-
                 <TextView
                     android:id="@+id/activity_persons_text_eve"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:text="TextView" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/persons_eve" />
             </LinearLayout>
-
 
         </LinearLayout>
 
